[project]
name = "rapi"
version = "0.1.0"
description = ""
authors = [
    {name = "SapS",email = "svsapegin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "advanced-alchemy (>=1.4.1,<2.0.0)",
    "litestar (>=2)",
    "litestar-granian (>=0)",
    "litestar-asyncpg (>=0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
